--- a/02-起步-版本控制.html
+++ b/02-起步-版本控制.html
@@ -72,6 +72,7 @@
     git checkout 名字 切换到指定的分支上
     git checkout -b 名字 创建并切换到新的分支上
     git merge 名字 在master主分支上执行该命令，将指定的分支合并到主分支上
+    git branch -d 名字 删除分支
 
 
 </body>
