--- a/02-起步-版本控制.html
+++ b/02-起步-版本控制.html
@@ -74,6 +74,10 @@
     git merge 名字 在master主分支上执行该命令，将指定的分支合并到主分支上
     git branch -d 名字 删除分支
 
+    合并分支操作：
+    在子分支上进行了修改，先处于子分支将文件提交git仓库，然后切换到主分支，将子分支合并到主分支，最后删除子分支
+
+    
 
 </body>
 
