--- a/02-起步-版本控制.html
+++ b/02-起步-版本控制.html
@@ -77,6 +77,15 @@
     合并分支操作：
     在子分支上进行了修改，先处于子分支将文件提交git仓库，然后切换到主分支，将子分支合并到主分支，最后删除子分支
 
+    将本地分支推送到远程仓库中：
+    git push -u 远程仓库别名 本地分支名字：远程分支名字   只有在第一次推送的时候需要加-u
+    git remote show 远程仓库名字 查看远程仓库中所有分支的信息
+
+    跟踪分支：
+    git checkout 远程分支的名字  从远程仓库中下载对应的分支
+    
+    拉取远程分支的最新代码：
+    git pull
     
 
 </body>
