--- a/02-起步-版本控制.html
+++ b/02-起步-版本控制.html
@@ -87,7 +87,9 @@
     拉取远程分支的最新代码：
     git pull  当前在哪个分支上运行该命令，就说明要更新哪个分支
     
-    
+    删除远程分支：
+    git push 远程仓库名字 --delete 远程分支名字
+
 
 </body>
 
